[tool.poetry]
name = "statistics"
version = "0.1.0"
description = ""
authors = ["Elias Rangel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.13.1"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
